<resources>
    <string name="app_name">SettingPreference</string>
    <string name="alerts">Alerts</string>
    <string name="general">General</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="device_theme">Device Theme</string>
    <string name="notif">Notifications</string>
    <string name="sleep_summary">After 30 seconds of inactivity</string>
    <string name="battery_saver">Battery saver </string>
    <string name="enable">enabled</string>
    <string name="disable">disabled</string>
    <string name="wifi_only">wifi_only</string>
    <string name="automatic">Automatic (based on wallpaper)</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="auto_play">Auto Play</string>
    <string name="display">Display</string>
    <string name="brightness_level">Brightness Level</string>
    <string name="value_percentage">20%</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="change_wallpaper">Change Wallpaper</string>
    <string name="settings">Settings</string>


    <string-array name="auto_play_entries">
        <item>@string/enable</item>
        <item>@string/disable</item>
        <item>@string/wifi_only</item>
    </string-array>

    <string-array name="theme_entries">
        <item>@string/automatic</item>
        <item>@string/light</item>
        <item>@string/dark</item>
    </string-array>

    <string-array name="entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>